Changes for 1.6.1.2
* Adding a backup lobby properties location on the tripleawarclub, in addition to the one on sourceforge. (veqryn)

* Fixed null pointer error in MovePanel.selectEndPoint when clicking to move a unit to a territory with no connections. (veqryn)


Changes for 1.6.1.1
* Fixing in loading old engine jars caused by odd pathnames. (veqryn)

* Made AA Guns appear in battle, then disappear after firing if they could not participate any further. (veqryn)

* Fixed bug causing stacked aa guns to all fire with the attack power of the most powerful aa gun in the group. (veqryn)

* Fixed some math bugs in low luck picking of aa casualties for maps with non-standard aa guns. (veqryn)

* Made massive updates to 1.5.2.1 and 1.6 so that they can work as 'old' jars and be run from 1.6.1.1 or future versions. (veqryn)

* Disallowing starting of games if game data is null. (veqryn)

* Allowing hosts to load an old savegame, causing old engine to join lobby and host directly, if they have the jar to run it. (veqryn)

* Allowing members in online lobby to join games hosted by older versions of triplea, if they have the jar to run it. (veqryn)

* Adding game version (GV), and engine version (EV), columns to lobby. (veqryn)

* Fixing many bugs in the handling of command line arguments. (veqryn)

* Adding Passworded (PW) column to lobby. (veqryn)

* Making game notes non-modal (doesn't stop all action til closed) and making it always on top so that you can read it while you play. (veqryn)

* Fixing movement validation to allow submarines that are transports to carry land units through other ships. (veqryn)

* Forcing default map selection when TripleA starts to avoid the last file path uri used if it is not within the user's triplea folder or the program's folder. (veqryn)

* Fixing bug with connections being lost during end of Air Battles, resulting in a game that can not continue. (veqryn)
